@@ -1,3 +1,6 @@
+Sat Mar 13 09:41:01 CET 2010
+	Releasing libmicrohttpd 0.4.6. -CG
+
 Wed Mar 10 13:18:26 CET 2010
 	Fixing bug in 100 CONTINUE replacement when handling POSTs
 	(see report on mailinglist), with testcase. -CG/MC
